# iimrp

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
MaxMSP/mrp.osc/: .gitignore  README.md
MaxMSP/mrp.osc/code/: validate_path.js
MaxMSP/mrp.osc/patchers/: mrp.osc.maxhelp  mrp.osc.maxpat
Python/: iipyper_midi_to_osc.py  iipyper_midi_tolvera_test.py  test_functions.py
docs/: index.md  osc.md
osc/: index.html
reference/iimrp/__init__/: index.html
reference/iimrp/harmonics/: index.html
reference/iimrp/iimrp/: index.html
reference/iimrp/thermal/: index.html
reference/tests/test_harmonics/: index.html
reference/tests/test_thermal/: index.html
search/: search_index.json
src/iimrp/: __init__.py  harmonics.py  iimrp.py  thermal.py  utils.py
src/tests/: test_harmonics.py  test_thermal.py
