[tool.poetry]
name = "iimrp"
version = "0.1.0"
description = "Magnetic resonator piano tools"
authors = ["Victor Shepardson <victor.shepardson@gmail.com>", "Jack Armitage <jack.armitage@me.com>", "Thor Magnusson <thor.magnusson@lhi.is>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.2"
iipyper = {git = "https://github.com/Intelligent-Instruments-Lab/iipyper.git"}

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.4.8"
mkdocs-material-extensions = "^1.3"
mkdocs-autorefs = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
